# ROS2_CePods_Controller

01/: gamecontroller_bridge_config.yaml  gamecontroller_bridge_main.cpp  gamecontroller_robot_bridge.cpp  gamecontroller_robot_bridge.h  main.py
02/: CMakeLists.txt  game_controller_robot_control.cpp  vollständige Implementierung des Game Controller Robot Control Nodes.md
02/config/: robot_controller_config.yaml
